# astatin3

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  char.py  index.html  main.py  requirements.txt  utils.py  web.py
assets/: foo.js  manifest.json  sw.js
assets/content/: test.md  test_2.md
blogs/example/: blog.json  index.html
pages/activity/: activity.html  activity.py  additional_commit.html  commit.html  page.json  repo.html
pages/blog/: blog.html  blog.py  blog_insert.html  blog_main_page.html  blog_page.html  page.json
pages/index/: home.html  index.py  page.json
pages/projects/: page.json  projects.html  projects.py  repo.html  update.html
src/: app.rs  content.rs  lib.rs  main.rs  pages.py  utils.py  web.py
web/: blocks.html
web/src/: background.js  date.js  noise.js  term.js
web/static/: navbar.html  tab.html
