[package]
name = "website"
version = "0.1.0"
edition = "2021"
include = ["**/*.md", "assets"]

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",]}

egui_commonmark = { version = "0.18.0", features = ["macros"] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
env_logger = "0.11.5"
lazy_static = "1.5.0"
